gcc/

PR tree-optimization/69956
	* tree-vect-stmts.c (supportable_widening_operation): Support
	multi-step conversion of boolean vectors.
	(supportable_narrowing_operation): Likewise.

gcc/testsuite/

	PR tree-optimization/69956
	* gcc.dg/pr69956.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@233850 138bc75d-0d04-0410-961f-82ee72b054a4